# xraymgr

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
examples/: config.json  index.html  user.html
src/: cli.rs  config.rs  crypto.rs  link.rs  main.rs
