[package]
name = "xraymgr"
version = "0.1.0"
edition = "2024"
description = "Simple CLI for managing Xray clients and generating VLESS links with QR codes"
license = "MIT"
repository = "https://github.com/MOIS3Y/xraymgr"
readme = "README.md"
categories = ["command-line-utilities", "config"]
keywords = ["xray", "config", "manager"]


[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
uuid = { version = "1.8", features = ["v4"] }
base64 = "0.22"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
urlencoding = "2.1"
anyhow = "1.0"
indicatif = "0.18.4"
console = "0.16.3"
qrcode = "0.14.1"
